# pinesnake

./: .gitignore  ARCHITECT_PLAN.md  ARCHITECT_REVIEW.md  BUILD.md  CLAUDE.md  README.md  app.py  pyproject.toml
docs/: supported_functions.md
examples/: ema_crossover.pine  macd_strategy.pine  rsi_strategy.pine
pinesnake/: __init__.py  analyzer.py  cli.py  parser.py
pinesnake/brokers/: __init__.py  tradier.py
pinesnake/codegen/: __init__.py  generator.py  indicators.py  strategy.py
pinesnake/codegen/templates/: config.env.j2  tradier_algo.py.j2
tests/: test_analyzer.py  test_codegen.py  test_parser.py
