[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinesnake"
version = "0.1.0"
description = "Pine Script → Python Algo Trading Converter. Convert TradingView strategies into standalone Python trading bots targeting Tradier."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael H", email = "mphinance@gmail.com"},
]
keywords = ["pine-script", "tradingview", "algo-trading", "tradier", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynescript>=0.3.0",
    "pandas>=2.0",
    "requests>=2.28",
    "click>=8.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
pinesnake = "pinesnake.cli:cli"

[project.urls]
Homepage = "https://github.com/mphinance/pinesnake"
Repository = "https://github.com/mphinance/pinesnake"

[tool.setuptools.packages.find]
include = ["pinesnake*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
